Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <!-- Write your HTML here -->
   <table>
     <tr>
-      <th>Name</th>
-      <th>Phone Number</th>
-      <th>Bringing</th>
+      <th>Daniel</th>
+      <th>845-282-4000</th>
+      <th>Guacamole</th>
     </tr>
     <tr></tr>
     <tr></tr>
